2007-03-23  dima  <dima.exe@gmail.com>

	* rails.el (rails-apply-for-buffer-type): added support to load new style submodes

	* rails-lib.el (merge-abbrev-tables): created this function

	* moved all rails-for-* to rails-*-minor-mode
	
	* rails-snippets.el (rails-snippets-menu-list): closed bug #9460, incorect indentation in snippets

2007-03-19  dima  <dima.exe@gmail.com>

	* rails-scripts.el (rails-rake): restore ask to save modified buffers before run rake test:*

	* rails-core.el (rails-core:layout-file): support template types on go to layout menu

	* rails-for-controller.el (rails-controller:create-view-for-action): create function
	(rails-controller:switch-to-view): allow select template type on create

	* rails.el: add support haml template engine

2007-03-15  dima  <dima.exe@gmail.com>

	* rails-scripts.el (rails-rake-tests): using `compile`

	* rails-ui.el (rails-minor-mode-menu-bar-map): add (interactive) to lambda functions

2007-03-13  dima  <dima.exe@gmail.com>

	* rails-for-model.el: create

	* rails-for-unit-test.el: create

	* rails-core.el (rails-core:buffer-type): support lambda expression in rails-directory<-->types

	* rails-scripts.el (rails-rake): ask to save modified buffers before run rake test:*

2007-02-02  dima  <dima.exe@gmail.com>

	* rails-snippets.el (rails-snippets-menu-list): bug #8381 (bad "ff" snippet)

2007-01-30  dima  <dima.exe@gmail.com>

	* rails-snippets.el: create and place into it all snippets code

	* rails-ui.el: drop snippets declaration, make separate menu "Snippets"

2007-01-29  dima  <dima.exe@gmail.com>

	* rails-lib.el: create function compile-snippet and create-snippets-and-menumap-from-dsl

	* rails-ui.el (ruby-mode-abbrev-table): add mai snippet (add_index in migrations)

	* rails.el (rails-db-parameters): patch #8232 (by Ronaldo Ferraz)
	Console is not starting because env is not quoted in the function
	call, resulting in a Ruby error

	* rails-ws.el, rails-wi.el: patch #8233 (by Ronaldo Ferraz) Fixes